# best-hack-2024-test-task-be

./: .gitignore  Dockerfile  README.md  alembic.ini  buildspec.yml  pre-build.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 985468d3242a_add_user_model.py
spotify_clone_be/: app.py  request_handler.py
spotify_clone_be/alembic/versions/: 0a759cdbab43_add_user_model.py  2ad562ff8c81_add_user_is_provider_field.py  a968a9e23b77_add_advertisement_model.py
spotify_clone_be/decorators/: __init__.py
spotify_clone_be/dto/: add_song_request_dto.py
spotify_clone_be/enums/: album_type_enum.py  error_message_enum.py
spotify_clone_be/exceptions/: email_already_exists_exception.py  forbidden_exception.py  user_not_found_exception.py  wrong_credentials_exception.py
spotify_clone_be/models/: __init__.py  base_model.py  user_model.py
spotify_clone_be/modules/album/: album_controller.py  album_service.py
spotify_clone_be/modules/auth/: auth_controller.py  auth_service.py
spotify_clone_be/schemas/: add_song_request_schema.py
src/: app.py  config.py
src/models/: base_model.py  user_model.py
src/modules/auth/: auth_service.py
test_task_be/: .env  alembic.ini  app.py  config.py  db.py
test_task_be/alembic/: env.py
test_task_be/decorators/: __init__.py
test_task_be/enums/: error_message_enum.py
test_task_be/exceptions/: advertisement_not_found_exception.py  invalid_token_exception.py
test_task_be/models/: __init__.py  advertisement_model.py  user_model.py
test_task_be/modules/advertisement/: advertisement_controller.py  advertisement_service.py
(+16 files in other folders)
