[tool.poetry]
name = "spotify_clone_be"
version = "0.1.0"
description = ""
authors = ["Roman Ortynskyi <50491616+lazyDefender@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
python-dotenv = "^1.0.1"
flask-sqlalchemy = "^3.1.1"
marshmallow = "^3.21.1"
alembic = "^1.13.1"
psycopg = "^3.1.18"
psycopg2-binary = "^2.9.9"
pyjwt = "^2.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
